# kurome

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  package.xml
config/: config.rviz  demo_config.yaml  demo_description.urdf  demo_world.sdf  ekf.yaml  empty.sdf  misao.yaml  pino.yaml  sim0_config.rviz  sim0_config.yaml  sim1_config.rviz  trash_cans.sdf  yoriko.yaml
cpp/: Makefile  README.md
examples/: ex1.cpp  ex4.cpp  ex5.cpp  ex6.cpp
launch/: demo.launch.py  exo.launch.py  misao.launch.py  pino.launch.py  sim0.launch.py  sim1.launch.py  yoriko.launch.py
msg/: CompetitionArea.msg  Rectangle.msg
ncpp/: Makefile
ncpp/src/: Agent.cpp  Entity.cpp  Frame.cpp  Grid.cpp  Iterators.cpp  Kurome.h  NILRotAStarMapper.hpp  Queues.hpp  Reporter.cpp  SimWaiter.hpp  gsocket.c  gsocket.cpp  gsocket.h  handlers.cpp  handlers.h  kcmd.cpp  main.cpp  scli.cpp  scratch.cpp  sserv.cpp
ncpp/src/gui/viewer/: viewer.cpp
ncpp/src/headers/: Agent.h  EllipseShape.hpp  Entity.hpp  Frame.h  Grid.h  Iterators.h  Mapper.h  Queues.hpp  Reporter.h  Sample.hpp  Waiter.hpp  gsocket.h  handlers.h  kcmd.h  kmsgs.h
old/cpp/examples/: ex2.cpp  ex8.cpp
old/cpp/src/: Grid.cpp
old/ncpp/: CMakeLists.txt  README.md  design-pov.txt
old/ncpp/src/: Frame.cpp  Kurome.h  kcmd.cpp  nearest.cpp
old/ncpp/src/gui/viewer/: viewer.cpp
old/ncpp/src/headers/: Agent.h  Entity.hpp  Frame.h  Iterators.h  Reporter.h  Waiter.hpp  binary_heap.hpp  handlers.h  kcmd.h  nearest.h
old/ncpp/src/mappers/: GoodAStar.hpp  LifelongAStarMapper.hpp  NullMapper.hpp  SimpleAnyRotStaticPotentialFieldMapper.hpp
old/ncpp/src/waiters/: SimWaiter.hpp
old/py/: entity.py
old/vcpp/: README.md
old/vcpp/examples/: ex7.cpp
old/vcpp/src/: Entity.h  main.cpp
py/: convert.py  grid.py
src/: Agent.cpp  Convert.cpp  Convert.h  Entity.h  Frame.cpp  Generator.cpp  Grid.cpp  Grid.h  Iterators.cpp  Kurome.h  Reporter.cpp  a_star.hpp  brain.cpp  builtin_graph_slam.hpp  commander.hpp  elastic_band.hpp  handlers.cpp  hardcoded_path_publisher.cpp  kcmd.cpp  kurome.cpp  kurome.h  lidar_data.hpp  lidar_matcher.hpp  lidar_scan_matcher.hpp  local_mask.cpp  locked_queue.hpp  main.cpp  matcher_test.cpp  mi_a_star.hpp  mi_rrt_x_fn.hpp  misao.cpp  observation.hpp  occupancy_grid.hpp  pathfinder.hpp  pino.cpp  point_cloud_data.hpp  point_cloud_matcher.hpp  point_cloud_scan_matcher.hpp  pose_publisher.cpp  qeftser_graph_slam.hpp  (+10 more)
src/gui/viewer/: viewer.cpp
src/headers/: Agent.h  EllipseShape.hpp  Entity.hpp  Frame.h  Generator.h  Grid.h  Iterators.h  Mapper.h  Queues.hpp  Reporter.h  Sample.hpp  binary_heap.hpp  jump_flood.h  kcmd.h  kmsgs.h
src/mappers/: LifelongAStarMapper.hpp  NILRotAStarMapper.hpp  SimpleAnyRotStaticPotentialFieldMapper.hpp
src/waiters/: SimWaiter.hpp
vcpp/: Makefile  README.md
vcpp/examples/: ex3.cpp
vcpp/src/: Grid.cpp  Grid.h
